# multi-agent-product-review-generator

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  run.sh  setup.sh
src/ai_product_review_generator/: __init__.py  agents.py  generator.py  model.py  response_model.py  utils.py
