[project]
name = "ai_product_review_generator"
version = "0.1.0"
description = "AI Product Review Generator is powered by multi-agents based on Agno framework."
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.12"
dependencies = [
	"python-dotenv",
	"newspaper4k",
	"duckduckgo-search",
	"lxml_html_clean",
	"agno",
	"openai",
	"google-genai",
	"anthropic",
	"gradio",
	"markdown"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
